@@ -1,9 +1,9 @@
 ---
 fixtures:
   repositories:
-    iptables: https://github.com/simp/pupmod-simp-iptables
-    simplib: https://github.com/simp/pupmod-simp-simplib
-    stdlib: https://github.com/simp/puppetlabs-stdlib
-    systemd: https://github.com/simp/puppet-systemd
+    iptables: https://github.com/simp/pupmod-simp-iptables.git
+    simplib: https://github.com/simp/pupmod-simp-simplib.git
+    stdlib: https://github.com/simp/puppetlabs-stdlib.git
+    systemd: https://github.com/simp/puppet-systemd.git
   symlinks:
     tpm2: "#{source_dir}"
